[package]
name = "libunftp"
version = "0.20.3" # remember to update html_root_url
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Koen Wilde <koen@chillheid.nl>",
    "Maarten Dirkse <mdirkse@bol.com>",
    "Steven Meunier <smeunier@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
description = "Extensible, async, cloud orientated FTP(S) server library."
documentation = "https://docs.rs/libunftp/"
repository = "https://github.com/bolcom/libunftp"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ftp", "ftps"]
categories = ["network-programming"]
edition = "2021"

[workspace]

members = [
    "crates/unftp-auth-jsonfile",
    "crates/unftp-auth-pam",
    "crates/unftp-auth-rest",
    "crates/unftp-sbe-fs",
    "crates/unftp-sbe-gcs"
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
all = "deny"

[features]
ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
aws-lc-rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
experimental = []
default = ["aws-lc-rs"]

[dependencies]
async-trait = "0.1.88"
bitflags = "2.9.0"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
derive_more = { version = "1.0.0", features = ["display"] }
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink"] }
getrandom = "0.2.15"
lazy_static = "1.5.0"
md-5 = "0.10.6"
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
prometheus = { version = "0.13.4", default-features = false }
proxy-protocol = "0.5.0"
rustls = { version = "0.23.25", default-features = false }
rustls-pemfile = "2.2.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-stdlog = "4.1.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = { version = "0.1.41", default-features = false }
tracing-attributes = "0.1.28"
uuid = { version = "1.16.0", features = ["v4"] }
x509-parser = "0.16.0"
dashmap = "6.1.0"
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }

[lints]
workspace = true
