[package]
name = "libunftp"
version = "0.23.0" # remember to update html_root_url
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Koen Wilde <koen@chillheid.nl>",
    "Maarten Dirkse <mdirkse@bol.com>",
    "Steven Meunier <smeunier@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
description = "Extensible, async, cloud orientated FTP(S) server library."
documentation = "https://docs.rs/libunftp/"
repository = "https://github.com/bolcom/libunftp"
homepage = "https://unftp.rs/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ftp", "ftps"]
categories = ["network-programming"]
edition = "2024"

[workspace]

members = [
    "crates/unftp-core",
    "crates/unftp-auth-jsonfile",
    "crates/unftp-auth-pam",
    "crates/unftp-auth-rest",
    "crates/unftp-sbe-fs",
    "crates/unftp-sbe-gcs"
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false }
derive_more = { version = "2.1.1", features = ["display"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-rustls = "0.27.7"
hyper-util = "0.1.20"
lazy_static = "1.5.0"
libunftp = { version = "0.23.0", path = "." }
unftp-core = { version = "0.1.0", path = "crates/unftp-core" }
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0" }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18" }
tracing = { version = "0.1.44", default-features = false }
tracing-attributes = "0.1.31"
getrandom = "0.3.4"

[features]
ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
prometheus = ["dep:prometheus"]
proxy_protocol = ["dep:proxy-protocol"]
experimental = []
default = ["aws_lc_rs", "prometheus", "proxy_protocol"]
all = ["aws_lc_rs", "prometheus", "proxy_protocol"]

[dependencies]
async-trait.workspace = true
bitflags = "2.10.0"
bytes.workspace = true
chrono = { workspace = true, features = ["clock", "std"] }
derive_more.workspace = true
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink"] }
getrandom.workspace = true
lazy_static.workspace = true
unftp-core.workspace = true
moka = { version = "0.12.13", default-features = false, features = ["sync"] }
nix = { version = "0.30.1", default-features = false, features = ["fs"] }
prometheus = { version = "0.14.0", default-features = false, optional = true }
proxy-protocol = { version = "0.5.0", optional = true }
rustls = { version = "0.23.36", default-features = false }
slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
slog-stdlog = "4.1.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false }
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
tracing-attributes.workspace = true
uuid = { version = "1.20.0", features = ["v4"] }
dashmap = "6.1.0"

[dev-dependencies]
libunftp = { path = "." }
pretty_assertions = "1.4.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }

[lints]
workspace = true
