[package]
name = "unftp-auth-json"
version = "0.1.0"
description = "An authenticator back-end for libunftp that authenticates against a JSON file"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2018"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "json"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-json"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-json"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-json"
readme = "README.md"

[dependencies]
async-trait = "0.1.42"
libunftp = { version="0.17.0", path="../../"}
unftp-sbe-fs = { version="0.1", path="../unftp-sbe-fs"}
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.62" }
tokio = { version = "1.2.0", features = ["rt", "time"]}
tracing = "0.1.23"
tracing-attributes = "0.1.12"
ring = "0.16.20"
base64 = "0.13.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"