[package]
name = "unftp-auth-jsonfile"
version = "0.3.6"
description = "An authentication back-end for libunftp that authenticates against credentials in JSON format"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "json"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-jsonfile"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.11.1"
ipnet = "2.11.0"
iprange = "0.6.7"
libunftp = { version = "0.21.1", path = "../../", default-features = false }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "time"] }
tracing = { version = "0.1.44", default-features = false }
tracing-attributes = "0.1.31"
valid = "0.3.1"
flate2 = "1.1.9"

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = ["macros"] }
unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }

[lints]
workspace = true
