[package]
name = "unftp-auth-jsonfile"
version = "0.3.6"
description = "An authentication back-end for libunftp that authenticates against credentials in JSON format"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "json"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-jsonfile"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
readme = "README.md"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
ipnet = "2.11.0"
iprange = "0.6.7"
libunftp.workspace = true
ring = "0.17.14"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
tracing.workspace = true
tracing-attributes.workspace = true
valid = "0.3.1"
flate2 = "1.1.9"

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["macros"] }
unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }

[lints]
workspace = true
