[package]
name = "unftp-auth-pam"
version = "0.2.6"
description = "An authentication back-end for libunftp that authenticates using PAM"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Koen Wilde <koen@chillheid.nl>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2021"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "pam"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-pam"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-pam"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-pam"
readme = "README.md"

[dependencies]
async-trait = "0.1.83"
libunftp = { version = "0.20.2", path = "../../" }
tracing = { version = "0.1.41", default-features = false }
tracing-attributes = "0.1.28"

[target.'cfg(target_family = "unix")'.dependencies]
pam-auth = { package = "pam", version = "0.7.0" }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros"] }

[lints]
workspace = true
