[package]
name = "unftp-auth-pam"
version = "0.2.7"
description = "An authentication back-end for libunftp that authenticates using PAM"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Koen Wilde <koen@chillheid.nl>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "pam"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-pam"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-pam"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-pam"
readme = "README.md"

[dependencies]
async-trait.workspace = true
libunftp.workspace = true
tracing.workspace = true
tracing-attributes.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
pam-auth = { package = "pam", version = "0.7.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
