[package]
name = "unftp-auth-rest"
version = "0.2.8"
description = "An authentication back-end for libunftp that consumes an HTTP API to authenticate"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "ftp", "ftps", "auth", "rest"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-rest"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-rest"
repository = "https://github.com/bolcom/libunftp/tree/hannes/crates/unftp-auth-rest"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-rustls = "0.27.5"
hyper-util = "0.1.11"
libunftp = { version = "0.21.0", path = "../../" }
percent-encoding = "2.3.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "net", "sync", "io-util", "time"] }
tracing = { version = "0.1.41", default-features = false }
tracing-attributes = "0.1.28"


[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.44.2", features = ["macros"] }
unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }

[lints]
workspace = true
