[package]
name = "unftp-auth-rest"
version = "0.2.8"
description = "An authentication back-end for libunftp that consumes an HTTP API to authenticate"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "ftp", "ftps", "auth", "rest"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-auth-rest"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-rest"
repository = "https://github.com/bolcom/libunftp/tree/hannes/crates/unftp-auth-rest"
readme = "README.md"

[dependencies]
async-trait.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libunftp.workspace = true
percent-encoding.workspace = true
regex = "1.12.3"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "io-util", "time"] }
tracing.workspace = true
tracing-attributes.workspace = true

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { workspace = true, features = ["macros"] }
unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }

[lints]
workspace = true
