[package]
name = "unftp-sbe-fs"
version = "0.3.0"
description = "A storage back-end for libunftp, storing files on local disk"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Koen Wilde <koen@chillheid.nl>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "filesystem"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-sbe-fs"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
readme = "README.md"

[features]
ring = ["libunftp/ring"]
aws_lc_rs = ["libunftp/aws_lc_rs"]
default = ["aws_lc_rs"]

[dependencies]
async-trait = "=0.1.88"
cfg-if = "1.0"
cap-std = "4.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
lazy_static = "1.5.0"
libunftp = { version = "0.21.1", path = "../../", default-features = false, features = ["proxy_protocol"] }
path_abs = "0.5.1"
tokio = { version = "1.48.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.44", default-features = false }
tracing-attributes = "0.1.31"

[dev-dependencies]
async_ftp = "6.0.0"
async-trait = "=0.1.88"
chrono = "0.4.42"
more-asserts = "0.3.1"
nix = { version = "0.30.1", default-features = false, features = ["user"] }
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
regex = "1.12.2"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
slog-async = "2.8.0"
slog-term = "2.9.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
getrandom = "0.3.4"

[target.'cfg(target_os = "freebsd")'.dev-dependencies]
capsicum = { version = "0.4.4", features = ["casper"] }
capsicum-net = { version = "0.1.0", features = ["tokio"] }

[lints]
workspace = true
