[package]
name = "unftp-sbe-gcs"
description = "A storage back-end for libunftp, storing files in Google Cloud Storage (GCS)"
version = "0.2.7"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "gcs"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-sbe-gcs"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["std", "serde"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-rustls = "0.27.5"
hyper-util = "0.1.11"
libunftp = { version = "0.21.0", path = "../../" }
mime = "0.3.17"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec", "compat"] }
tracing = { version = "0.1.41", default-features = false }
tracing-attributes = "0.1.28"
yup-oauth2 = { version = "12.1.0", default-features = false, features = ["hyper-rustls", "service-account", "aws-lc-rs"] }

[dev-dependencies]
async_ftp = "6.0.0"
clap = { version = "4.5.37", features = ["env"] }
lazy_static = "1.5.0"
more-asserts = "0.3.1"
path_abs = "0.5.1"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
