[package]
name = "unftp-sbe-gcs"
description = "A storage back-end for libunftp, storing files in Google Cloud Storage (GCS)"
version = "0.2.8"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "gcs"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-sbe-gcs"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false, features = ["std", "serde"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-rustls = "0.27.7"
hyper-util = "0.1.20"
libunftp = { version = "0.22.0", path = "../../", default-features = false }
mime = "0.3.17"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec", "compat"] }
tracing = { version = "0.1.44", default-features = false }
tracing-attributes = "0.1.31"
yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "service-account", "aws-lc-rs"] }

[dev-dependencies]
async_ftp = "6.0.0"
clap = { version = "4.5.57", features = ["env"] }
lazy_static = "1.5.0"
more-asserts = "0.3.1"
path_abs = "0.5.1"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.2"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
