[package]
name = "unftp-sbe-gcs"
description = "A storage back-end for libunftp, storing files in Google Cloud Storage (GCS)"
version = "0.2.9"
authors = [
    "Agoston Horvath <ahorvath@bol.com>",
    "Dávid Kosztka <dkosztka@bol.com>",
    "Hannes de Jager <hdejager@bol.com>",
    "Rob klein Gunnewiek <rkleingunnewiek@bol.com>",
]
edition = "2024"
license = "Apache-2.0"
keywords = ["libunftp", "unftp", "ftp", "ftps", "gcs"]
categories = ["network-programming"]
documentation = "https://docs.rs/unftp-sbe-gcs"
homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
readme = "README.md"

[features]
default = ["aws_lc_rs"]
aws_lc_rs = ["libunftp/aws_lc_rs"]
ring = ["libunftp/ring"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["std", "serde"] }
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
libunftp.workspace = true
mime = "0.3.17"
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
time = "0.3.47"
tokio = { workspace = true, features = ["rt", "net", "sync", "io-util", "time", "fs"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec", "compat"] }
tracing.workspace = true
tracing-attributes.workspace = true
yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "service-account", "aws-lc-rs"] }

[dev-dependencies]
async_ftp = "6.0.0"
clap = { version = "4.5.57", features = ["env"] }
lazy_static.workspace = true
more-asserts = "0.3.1"
path_abs = "0.5.1"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.2"
tempfile = "3.24.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
